--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.9.0",
     "prettier": "^1.12.1",
+    "processmd": "^4.2.1",
     "sass-loader": "^7.0.1"
   }
 }
