--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^4.9.0",
     "prettier": "^1.12.1",
     "processmd": "^4.2.1",
+    "push-dir": "^0.4.1",
     "sass-loader": "^7.0.1"
   }
 }
